--- a/app/src/main/res/layout/activity_swipe.xml
+++ b/app/src/main/res/layout/activity_swipe.xml
@@ -7,6 +7,7 @@
     tools:context=".SwipeActivity">
 
     <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
