--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -23,9 +23,10 @@
         android:id="@+id/optionsRadioGroup"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="50dp"
         android:layout_marginTop="132dp"
+        android:layout_marginRight="50dp"
         android:orientation="vertical"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/questionTextView">
@@ -54,17 +55,6 @@
             android:layout_height="wrap_content"
             android:text="Option 4" />
     </RadioGroup>
-
-    <Button
-        android:id="@+id/submitAnswerButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Submit"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/optionsRadioGroup" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
