--- a/app/src/main/res/layout/quiz_result_item.xml
+++ b/app/src/main/res/layout/quiz_result_item.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:textSize="16sp"
-        android:textColor="#333"
+        android:textColor="@color/black"
         android:text="April 1, 2023" />
 
     <TextView
@@ -21,5 +21,5 @@
         android:layout_height="wrap_content"
         android:textSize="16sp"
         android:textColor="@color/black"
-        android:text="Score: 8" />
+        android:text="Score: 10" />
 </LinearLayout>
